welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: expected class or object definition
def fonctiontest(){
^SnakeBuggle:26: error: expected class or object definition
def passerpent(){
^SnakeBuggle:40: error: Unmatched closing brace '}' ignored here
}
^